Fix T57305: NDOF frozen w/ lock view to camera

This effectively reverts 030297209f2508a and 785e8a636a2939,
which caused this issue.